fold for create and exercise cases